Adjustments for header and footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
     <div class='large-3 medium-3 columns'>
       <h1>
         <a href='index.html'>
-          <img alt="" src="{{site.url}}/images/logo-grey.png" />
+          <img alt="" src="{{site.url}}/images/logo-square-grey.png" style='opacity:0.3; width: 75%; height: auto'/>
         </a>
       </h1>
       
@@ -46,7 +46,7 @@
         <li>Location: 41 Dean Street, London, UK</li>
       </ul> -->
       <div class='spacing'></div>
-      <ul class='socials'>
+      <ul class='socials footer'>
         <li>
           <a href='http://facebook.com'>
             <i class='fa fa-facebook'></i>
@@ -58,15 +58,15 @@
           </a>
         </li>
         <li>
-          <a href='http://dribbble.com'>
-            <i class='fa fa-dribbble'></i>
+          <a href='mailto:info@intersections.io'>
+            <i class='fa fa-envelope'></i>
           </a>
         </li>
-        <li>
+        <!-- <li>
           <a href='http://tumblr.com'>
             <i class='fa fa-tumblr'></i>
           </a>
-        </li>
+        </li> -->
       </ul>
       <div class='spacing'></div>
     </div>
