--- a/_sass/foundation/components/_custom-intersections.scss
+++ b/_sass/foundation/components/_custom-intersections.scss
@@ -1,16 +1,29 @@
-// Fonts:
+// These are the colours, as detailed in _global.scss (copied here for reference):
+
+// $yellow_01      : #fcd606; // Lightest yellow
+// $yellow_02      : #edc31a; // Darker
+// $yellow_03      : #d7b428; // Darkest
+// $green_01       : #62d3bd; // Lightest green
+// $green_02       : #41a491; // Darker
+// $green_03       : #348c7b; // Darkest
+// $grey_01        : #dadad9; // Light
+// $grey_02        : #a5a5a5; // Darker
+// $grey_03        : #929292; // Darker yet
+// $grey_04        : #393939; // Darkest
+// $ruby_01        : #f23b74; // Bright
+// $ruby_02        : #b02752; // Darker
+// $ruby_03        : #941d42; // Darkest
 
 
 
-// Colour rules:
 
 // HEADER
 .top-bar-section {
 // Image:
 	> ul li a {
-		color: blue;
+		color: #b02752;
 		font-family: 'Source Code Pro' 700;
-		&:hover {
+		>:hover {
 			color: pink;
 			background: red;
 		}
@@ -27,4 +40,213 @@ img.header-logo  {
 		margin-top: -5px;
 	}
 
-// Nav links:
+p.header-line {
+	font-size: 1.5em;
+	line-height: 1.8em;
+	font-weight: 400;
+}
+
+.top-bar-section {
+	&:hover {
+		background: red;
+	}
+}
+
+.index_page {
+	& img {
+		margin: 0 auto;
+		background: pink;
+	}
+}
+
+.button-link {
+	color: black;
+	background: pink;
+	padding: 20px 15px;
+	height: 2em;
+	margin-top:20px;
+	&:hover {
+		background: orange;
+	}
+}
+
+img.header-logo .shrink {
+
+    filter: gray; /* IE6-9 */
+  -webkit-filter: grayscale(1); /* Google Chrome, Safari 6+ & Opera 15+ */
+  filter: grayscale(1); /* Microsoft Edge and Firefox 35+ */
+}
+
+// Styles for speakers and artists
+
+.people {
+	display: block;
+	margin-bottom: 20px;
+}
+
+.name {
+	font-size: 1.8em;
+	font-family: 'Source Code Pro';
+	font-weight: 600;
+	opacity: 0.8;
+	margin-bottom: 0;
+}
+
+.pos {
+	font-size: 1.5em;
+	font-family: 'Source Code Pro';
+}
+
+ul.socials {
+	padding: 0;
+	margin: 0;
+	
+	> li {
+	display: inline-block;
+	margin-right: .1rem;
+	margin-bottom: .15rem;
+	
+		> a i {
+		  width: 2.5rem;
+		  height: 2.5rem;
+		  -moz-border-radius: 1.25rem;
+		  -webkit-border-radius: 1.25rem;
+		  border-radius: 1.25rem;
+		  background: $ruby_01;
+		  color: #fff;
+		  text-align: center;
+		  font-size: 1.25rem;
+		  line-height: 2.5rem;
+		}
+		> a:hover i {
+			-moz-transition: all 0.2s linear;
+			-o-transition: all 0.2s linear;
+			-webkit-transition: all 0.2s linear;
+			transition: all 0.2s linear;
+			background: $ruby_02;
+			// color: #333;
+			
+		}
+	}
+}
+
+// Strapline styles on index page (theme title)
+
+.intro-text {
+	text-align: center;
+	color: white;
+	font-size: 2.8em;
+	opacity: 0.5;
+	&.body {
+		opacity: 1;
+		margin-bottom: 1.5em;
+	}
+	&.para {
+		font-size: 1.8em;
+		opacity: 1;
+	}
+}
+
+// Front page sections for events, exhibition, etc
+
+.front-page-section {
+	padding-top: 50px;
+	&.events {
+		background: blue;
+	}
+	&.exhibition {
+		background: orange;
+	}
+	&.symposium {
+		background: red;
+	}
+}
+
+// Overrides for footer section
+
+/*Footer */
+#footer {
+  // background: #222;
+  background: $yellow_02;
+  color: #999;
+
+	>h1 {
+	  margin-bottom: 25px;
+	}
+
+	> h1, h2, h3, h4, h5, h6 {
+  		color: #eee;
+	}
+	> ul {
+  		margin: 0;
+	}
+	> ul li {
+	  list-style: none;
+	  line-height: 1.875rem;
+	}
+	> ul a {
+	  color: #999;
+	}
+	> ul a:hover {
+	  color: #eee;
+	}
+	> ul.socials.footer {
+		> li {
+			list-style: none;
+			display: inline-block;
+			margin-right: 5px;
+			margin-bottom: 8px;
+			> a {
+				  width: 40px;
+				  height: 40px;
+				  -moz-border-radius: 20px;
+				  -webkit-border-radius: 20px;
+				  border-radius: 20px;
+				  background: $grey_04;
+				>  i {
+				  color: #333;
+				  text-align: center;
+				  font-size: 1.25rem;
+				  line-height: 3rem;
+				}
+		}
+		> a:hover {
+		  -moz-transition: all 0.2s linear;
+		  -o-transition: all 0.2s linear;
+		  -webkit-transition: all 0.2s linear;
+		  transition: all 0.2s linear;
+		  background: #F9CE06;
+			> i {
+		}
+	}
+}
+
+}
+	> input.email-address {
+	  padding: 5px 15px;
+	  height: 3.3rem;
+	  background: #eee;
+	}
+
+	>.fullwidth p.copyright {
+	  padding-left: 30px;
+	  float: left;
+	  font-size: 1.28571rem;
+	}
+	>.fullwidth ul.socials {
+	  text-align: right;
+	  padding-right: 20px;
+	}
+	>.fullwidth ul.socials li {
+	  margin-right: 10px;
+	}
+}
+
+// NAVIGATION AT TOP
+
+.top-bar-section > ul li a {
+	color: $ruby_02;
+	&.active {
+		color: purple;
+	}
+}
