--- a/_includes/our-supporters.html
+++ b/_includes/our-supporters.html
@@ -1,7 +1,7 @@
-<div class='full parallax' style='background-image: url(images/@stock/customers-bg.jpg); color: #fff;'>
+<div class='full parallax' style='background: #eee; color: #222;'>
   <div class='row'>
     <div class='large-12 columns'>
-      {% include section-header.html title="Inter/sections is generously supported by:" color="#fff" %}
+      {% include section-header.html title="Inter/sections is generously supported by:" color="#222" %}
       
     </div>
   </div>
@@ -9,8 +9,8 @@
     <div class='large-12 columns'>
       <div class='mod modClients' data-slides_to_show='4'>
         <div class='clients'>
-          {% for client in site.data.supporters %}
-            <div><a href="{{supporters.link}}"><img alt="" src="{{supporters.image}}" /></a></div>
+          {% for supporter in site.data.supporters %}
+            <div><a href="{{supporter.link}}"><img alt="" src="{{supporter.image}}" /></a></div>
           {% endfor %}
         </div>
       </div>
