--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,9 +18,11 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About Inter/sections</a></li>
+          <li><a href="symposium.html">Symposium</a></li>
           <li><a href="events.html">Events</a></li>
           <li><a href="exhibition.html">Exhibition</a></li>
-          <li><a href="symposium.html">Symposium</a></li>
+          <li><a href="schedule-and-location.html">Scheudule and location</a></li>
+          <li><a href="code-of-conduct.html">Code of conduct</a></li>
         </ul>
       </div>
       <div class='spacing'></div>
