--- a/css/foundation.scss
+++ b/css/foundation.scss
@@ -51,4 +51,4 @@
   @import "foundation/components/visibility";
   // This is the stylesheet for overriding established CSS elements:
   @import "foundation/components/custom-intersections";
-  @import "foundation/components/cal";
+  // @import "foundation/components/cal";
