--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -30,11 +30,10 @@
     <div class='large-3 medium-3 columns'>
       <div class='spacing'></div>
       <div class='links'>
-        <h4>Contact us</h4>
+        <h4>Get in touch</h4>
       <ul>
-        <li>Phone: +86 (03) 9810 4612</li>
-        <li>Emial: info@devoll-team.com</li>
-        <li>Location: 41 Dean Street, London, UK</li>
+        <li>General:<br /> <a href="mailto:info@intersections.io">info@intersections.io</a></li>
+        <li>Art program:<br /> <a href="mailto:commissions@intersections.io">commissions@intersections.io</a></li>
       </ul>
       </div>
       <div class='spacing'></div>
