--- a/_sass/foundation/components/_top-bar.scss
+++ b/_sass/foundation/components/_top-bar.scss
@@ -34,8 +34,9 @@ $topbar-link-font-size: rem-calc(13) !default;
 $topbar-link-hover-lightness: -10% !default; // Darken by 10%
 $topbar-link-bg: $topbar-bg !default;
 $topbar-link-bg-hover: $oil !default;
-$topbar-link-bg-color-hover: $charcoal !default;
-$topbar-link-bg-active: $primary-color !default;
+// $topbar-link-bg-color-hover: $charcoal !default;
+$topbar-link-bg-color-hover: $white !default;
+$topbar-link-bg-active: $white !default;
 $topbar-link-bg-active-hover: scale-color($primary-color, $lightness: -14%) !default;
 $topbar-link-font-family: $body-font-family !default;
 $topbar-link-text-transform: none !default;
@@ -318,7 +319,7 @@ $topbar-dropdown-arrows: true !default; //Set false to remove the \00bb >> text 
         & > a {
           display: block;
           width: 100%;
-          color: green;
+          color: black;
           padding: 12px 0 12px 0;
           padding-#{$default-float}: $topbar-link-padding;
           font-family: $topbar-link-font-family;
