Removed inline styles for logo handling in footer.

--- a/_sass/foundation/components/_custom-intersections.scss
+++ b/_sass/foundation/components/_custom-intersections.scss
@@ -345,6 +345,14 @@ ul.socials {
 	}
 }
 
+div.footer-logo > a img {
+	width: 65%; 
+	height: auto; 
+	opacity: .5; 
+	-webkit-opacity: .5;
+	text-align: center;
+}
+
 // SCHEDULE PAGE
 
 .front-page-section.events{
