--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,11 +2,11 @@
   <div class='three spacing'></div>
   <div class='row'>
     <div class='large-3 medium-3 columns'>
-      <h1>
+      <div class="footer-logo">
         <a href='index.html'>
-          <img alt="" src="{{site.url}}/images/logo-square-grey.png" style='opacity:0.9; width: 75%; height: auto'/>
+          <img alt="" src="{{site.url}}/images/logo-square-grey.png" />
         </a>
-      </h1>
+      </div>
       
       <div class='spacing'></div>
       <div class='spacing'></div>
