Path correction for image

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,8 +3,8 @@
     <ul class='title-area'>
       <li class='name'>
         <h1>
-          <a href='{{site.url}}/index.html'>
-            <img class="header-logo" alt="" src="{{site.url}}/images/logo-square.png" />
+          <a href='{{site.url}}index.html'>
+            <img class="header-logo" alt="" src="{{site.url}}images/logo-square.png" />
           </a>
         </h1>
       </li>
