--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
       <li class='name'>
         <h1>
           <a href='{{site.url}}index.html'>
-            <img class="header-logo" alt="" src="{{site.url}}images/logo-square.png" />
+            <img class="header-logo" alt="" src="{{site.url}}/images/logo-square.png" />
           </a>
         </h1>
       </li>
