Changes pertaining to index page cover image padding, and banners delineating sections on the front page

--- a/css/style.css
+++ b/css/style.css
@@ -657,6 +657,13 @@ hr {
   background-size: cover;
   background-position: 50% 50%;
 }
+
+.full-front-page {
+  padding: 80px 0;
+  background-size: cover;
+  background-position: 50% 50%;  
+}
+
 .full.no-padding {
   padding: 0;
 }
