--- a/_sass/foundation/components/_custom-intersections.scss
+++ b/_sass/foundation/components/_custom-intersections.scss
@@ -68,7 +68,11 @@ p{
 }
 
 .full{
-	padding: 80px 0 20px 0;
+	padding: 0 0 20px 0;
+}
+
+.main-page-header {
+	padding: 2em 0 20px 0;
 }
 
 .medium-6.columns{
@@ -189,7 +193,7 @@ ul.socials {
 // Front page sections for events, exhibition, etc
 
 .front-page-section {
-	padding-top: 50px;
+	padding: 2em 0 0 0;
 	&.symposium {
 		background: $blue_00; //$yellow_-01;
 		color: black; 
