Various changes to colour, layout and padding for index page elements

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
     <ul class='title-area'>
       <li class='name'>
         <h1>
-          <a href='{{site.url}}index.html'>
+          <a href='{{site.url}}/index.html'>
             <img class="header-logo" alt="" src="{{site.url}}/images/logo-square.png" />
           </a>
         </h1>
