--- a/css/style.css
+++ b/css/style.css
@@ -3200,8 +3200,9 @@ body {
   font-size: 4rem;
 }
 .modSectionHeader.big h3 {
-  font-weight: normal;
+  // font-weight: normal;
   letter-spacing: 3px;
+  font-size: 2.5em;
 }
 
 .modSectionHeader.alt h2 {
