Corrected social URLs on bottom of page

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -49,12 +49,12 @@
       <div class='spacing'></div>
       <ul class='socials footer'>
         <li>
-          <a href='http://facebook.com'>
+          <a href='https://www.facebook.com/matintersections/'>
             <i class='fa fa-facebook'></i>
           </a>
         </li>
         <li>
-          <a href='http://twitter.com'>
+          <a href='https://twitter.com/_intersections_'>
             <i class='fa fa-twitter'></i>
           </a>
         </li>
