Added speaker and artist bios, need to address iframe on front page

--- a/_sass/foundation/components/_custom-intersections.scss
+++ b/_sass/foundation/components/_custom-intersections.scss
@@ -142,6 +142,13 @@ img.header-logo .shrink {
 .pos {
 	font-size: 1.5em;
 	font-family: 'Source Code Pro';
+	margin-bottom: 0.8em;
+    line-height: 1.2em;
+    margin-top: 0.8em;
+}
+
+.bio {
+	margin-bottom: 1.7rem;
 }
 
 ul.socials {
@@ -385,3 +392,6 @@ div.footer-logo > a img {
 		font-size: 2em;
 	}
 }
+
+// HANDLER FOR IFRMAE
+
