--- a/_sass/foundation/components/_custom-intersections.scss
+++ b/_sass/foundation/components/_custom-intersections.scss
@@ -400,11 +400,24 @@ div.footer-logo > a img {
 
 // HANDLER FOR IFRMAE
 
+.iframe-flex {
+	display: -webkit-box;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+}
+
 .iframe-content {
 	align-items: stretch;
+	-webkit-box-flex: 1;
+ 	-moz-box-flex: 1;
+	-webkit-flex: 1;
+	-ms-flex: 1;
 	flex: 1;
-	// border: 1px solid red;
 }
+
+
 
 // EVENTS PAGE: TAGS
 
