Added Code of Conduct link to bottom of page

--- a/_includes/our-supporters.html
+++ b/_includes/our-supporters.html
@@ -16,5 +16,6 @@
       </div>
     </div>
   </div>
+  <p class='code-of-conduct-text'>Inter/sections is dedicated to creating a harassment-free space for everyone. <a href="code-of-conduct.html">Please read our Code of Conduct.</a></p>
   <div class='two spacing'></div>
 </div>
