--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,8 @@
   <link rel="stylesheet" href="{{ "/css/style.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/css/fontello.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/css/font-awesome.css" | prepend: site.baseurl }}">
-  <link rel="shortcut icon" type="image/x-icon" href="{{ "images/favicon.ico" | prepend: site.baseurl }}">
+  
+  <link rel="shortcut icon" type="image/png" href="{{ site.url }}/images/favicon.png">
   <script src="{{ "/javascripts/libs.js" | prepend: site.baseurl }}" type="text/javascript"></script>
   <script>
     // terrificjs bootstrap
