--- a/_sass/foundation/components/_custom-intersections.scss
+++ b/_sass/foundation/components/_custom-intersections.scss
@@ -108,6 +108,9 @@ p{
 	-moz-border-radius: 0.3rem;
 	-webkit-border-radius: 0.3rem;
 	border-radius: 0.3rem;
+	&.register-now {
+		background: orange;
+	}
 
 	&:hover {
 		background: $blue_01;
