Correcting old links

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,12 +16,12 @@
       <div class='links'>
         <h4>Navigate</h4>
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="{{ site.url }}">Home</a></li>
           <li><a href="about.html">About Inter/sections</a></li>
           <li><a href="symposium.html">Symposium</a></li>
           <li><a href="events.html">Events</a></li>
           <li><a href="exhibition.html">Exhibition</a></li>
-          <li><a href="schedule-and-location.html">Scheudule and location</a></li>
+          <li><a href="location.html">Location</a></li>
           <li><a href="code-of-conduct.html">Code of conduct</a></li>
         </ul>
       </div>
